improvement(MtcFeedResource.java): Replace Arrays wit List.of